--- a/apps/eosc/package.json
+++ b/apps/eosc/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dans-dv/selector-button": "workspace:*",
     "@dans-dv/theme": "workspace:*",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
