--- a/apps/eosc/package.json
+++ b/apps/eosc/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@dans-dv/selector-button": "workspace:*",
-    "@dans-dv/theme": "workspace:*",
+    "@dans-dv/wrapper": "workspace:*",
+    "@emotion/react": "^11.14.0",
+    "@emotion/cache": "^11.14.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
