--- a/packages/wrapper/package.json
+++ b/packages/wrapper/package.json
@@ -1,19 +1,22 @@
 {
-    "name": "@dans-dv/theme",
+    "name": "@dans-dv/wrapper",
     "main": "lib/index.tsx",
     "version": "1.0.0",
     "description": "",
     "keywords": [],
     "author": "",
     "dependencies": {
+      "@emotion/cache": "^11.14.0",
       "@emotion/react": "^11.14.0",
       "@emotion/styled": "^11.14.0",
       "@mui/material": "^7.1.0",
       "@mui/utils": "^7.1.0",
-      "react": "^19.1.0"
+      "react": "^19.1.0",
+      "react-dom": "^19.1.0"
     },
     "devDependencies": {
-      "@types/react": "^19.1.0"
+      "@types/react": "^19.1.0",
+      "@types/react-dom": "^19.1.0"
     }
   }
   
