--- a/packages/swh-registration/package.json
+++ b/packages/swh-registration/package.json
@@ -1,17 +1,18 @@
 {
-    "name": "@dans-dv/swh-registration",
-    "main": "lib/index.tsx",
-    "version": "1.0.0",
-    "description": "",
-    "keywords": [],
-    "author": "",
-    "dependencies": {
-      "@dans-dv/wrapper": "workspace:*",
-      "@mui/material": "^7.1.0",
-      "react": "^19.1.0"
-    },
-    "devDependencies": {
-      "@types/react": "^19.1.0"
-    }
+  "name": "@dans-dv/swh-registration",
+  "main": "lib/index.tsx",
+  "version": "1.0.0",
+  "description": "",
+  "keywords": [],
+  "author": "",
+  "dependencies": {
+    "@dans-dv/inputs": "workspace:*",
+    "@dans-dv/wrapper": "workspace:*",
+    "@mui/material": "^7.1.0",
+    "react": "^19.1.0",
+    "react-hook-form": "^7.56.4"
+  },
+  "devDependencies": {
+    "@types/react": "^19.1.0"
   }
-  
+}
