--- a/packages/selector/package.json
+++ b/packages/selector/package.json
@@ -1,21 +1,18 @@
 {
-  "name": "@dans-dv/swh-registration",
+  "name": "@dans-dv/selector",
   "main": "lib/index.tsx",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
   "author": "",
   "dependencies": {
-    "@dans-dv/inputs": "workspace:*",
-    "@dans-dv/wrapper": "workspace:*",
+    "@dans-dv/swh-registration": "workspace:*",
     "@mui/material": "^7.1.0",
     "@reduxjs/toolkit": "^2.8.2",
     "react": "^19.1.0",
-    "react-hook-form": "^7.56.4"
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
-    "@dans-dv/selector": "workspace:*",
-    "@types/react": "^19.1.0",
-    "react-redux": "^9.2.0"
+    "@types/react": "^19.1.0"
   }
 }
