--- a/packages/file-upload/package.json
+++ b/packages/file-upload/package.json
@@ -6,12 +6,14 @@
   "keywords": [],
   "author": "",
   "dependencies": {
+    "@dans-dv/wrapper": "workspace:*",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "@reduxjs/toolkit": "^2.8.2",
     "react": "^19.1.0",
     "react-dropzone": "^14.3.8",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "tus-js-client": "^4.3.1"
   },
   "devDependencies": {
     "@types/react": "^19.1.0"
