--- a/packages/config-eslint/package.json
+++ b/packages/config-eslint/package.json
@@ -2,14 +2,18 @@
   "name": "@dans-dv/eslint-config",
   "version": "0.0.0",
   "main": "index.js",
-  "license": "MIT",
+  "exports": {
+    ".": {
+      "import": "./index.js"
+    }
+  },
+  "type": "module",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^8.23.0",
-    "@typescript-eslint/parser": "^8.23.0",
-    "eslint": "^9.25.0",
-    "eslint-config-prettier": "^10.1.5",
-    "prettier": "^3.5.3",
-    "typescript-eslint": "^8.30.1"
+    "@eslint/js": "^9.27.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^16.0.0",
+    "typescript-eslint": "^8.32.1"
   },
   "publishConfig": {
     "access": "public"
