--- a/packages/config-typescript/package.json
+++ b/packages/config-typescript/package.json
@@ -2,7 +2,7 @@
   "name": "@dans-dv/typescript-config",
   "version": "0.0.0",
   "private": true,
-  "license": "MIT",
+  "type": "module",
   "publishConfig": {
     "access": "public"
   },
