--- a/packages/inputs/package.json
+++ b/packages/inputs/package.json
@@ -1,15 +1,21 @@
 {
-    "name": "@dans-dv/inputs",
-    "main": "lib/index.tsx",
-    "version": "1.0.0",
-    "description": "",
-    "keywords": [],
-    "author": "",
-    "dependencies": {
-      "@mui/material": "^7.1.0",
-      "react": "^19.1.0"
-    },
-    "devDependencies": {
-      "@types/react": "^19.1.0"
+  "name": "@dans-dv/inputs",
+  "main": "lib/index.tsx",
+  "version": "1.0.0",
+  "type": "module",
+  "exports": {
+    ".": {
+      "import": "./lib/index.js"
     }
+  },
+  "description": "",
+  "keywords": [],
+  "author": "",
+  "dependencies": {
+    "@mui/material": "^7.1.0",
+    "react": "^19.1.0"
+  },
+  "devDependencies": {
+    "@types/react": "^19.1.0"
   }
+}
