--- a/packages/swh-registration/package.json
+++ b/packages/swh-registration/package.json
@@ -2,6 +2,12 @@
   "name": "@dans-dv/swh-registration",
   "main": "lib/index.tsx",
   "version": "1.0.0",
+  "type": "module",
+  "exports": {
+    ".": {
+      "import": "./lib/index.js"
+    }
+  },
   "description": "",
   "keywords": [],
   "author": "",
