--- a/packages/swh-registration/package.json
+++ b/packages/swh-registration/package.json
@@ -16,6 +16,7 @@
     "@dans-dv/submit": "workspace:*",
     "@dans-dv/wrapper": "workspace:*",
     "@mui/material": "^7.1.0",
+    "@mui/icons-material": "^7.1.0",
     "@reduxjs/toolkit": "^2.8.2",
     "react": "^19.1.0",
     "react-hook-form": "^7.56.4"
