--- a/packages/inputs/package.json
+++ b/packages/inputs/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "dependencies": {
     "@mui/material": "^7.1.0",
+    "@mui/icons-material": "^7.1.0",
     "react": "^19.1.0"
   },
   "devDependencies": {
