--- a/packages/swh-registration/package.json
+++ b/packages/swh-registration/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "dependencies": {
     "@dans-dv/inputs": "workspace:*",
+    "@dans-dv/layout": "workspace:*",
     "@dans-dv/submit": "workspace:*",
     "@dans-dv/wrapper": "workspace:*",
     "@mui/material": "^7.1.0",
