--- a/packages/keywords/package.json
+++ b/packages/keywords/package.json
@@ -13,12 +13,14 @@
   "author": "",
   "dependencies": {
     "@dans-dv/inputs": "workspace:*",
+    "@dans-dv/layout": "workspace:*",
     "@dans-dv/submit": "workspace:*",
     "@dans-dv/wrapper": "workspace:*",
     "@mui/material": "^7.1.0",
     "@reduxjs/toolkit": "^2.8.2",
     "react": "^19.1.0",
-    "react-hook-form": "^7.56.4"
+    "react-hook-form": "^7.56.4",
+    "use-debounce": "^10.0.5"
   },
   "devDependencies": {
     "@types/react": "^19.1.0",
