--- a/packages/geomap/package.json
+++ b/packages/geomap/package.json
@@ -7,6 +7,7 @@
   "keywords": [],
   "author": "",
   "dependencies": {
+    "@dans-dv/inputs": "workspace:*",
     "@dans-dv/layout": "workspace:*",
     "@dans-dv/submit": "workspace:*",
     "@dans-dv/wrapper": "workspace:*",
@@ -15,6 +16,7 @@
     "@mui/material": "^7.1.0",
     "@reduxjs/toolkit": "^2.8.2",
     "fast-xml-parser": "^5.2.5",
+    "mapbox-gl-draw-rectangle-mode": "^1.0.4",
     "maplibre-gl": "^5.6.0",
     "react": "^19.1.0",
     "react-map-gl": "^8.0.4",
